Fixed some layout issues

--- a/app/assets/stylesheets/posts.css.scss
+++ b/app/assets/stylesheets/posts.css.scss
@@ -28,7 +28,7 @@
 //  background-color: #00f;
 //  }
 
-html {
+html, body {
   background: url('/assets/grey.png')
 }
 
